--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -e dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
